k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rotsu
  labels:
    app.kubernetes.io/name: rotsu
    app.kubernetes.io/part-of: rotsu-platform
    istio-injection: enabled
