k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rotsu-frontend
  namespace: rotsu
  labels:
    app: rotsu-frontend
    app.kubernetes.io/name: rotsu-frontend
    app.kubernetes.io/part-of: rotsu-platform
spec:
  type: NodePort
  selector:
    app: rotsu-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
      protocol: TCP
    - name: metrics
      port: 9113
      targetPort: metrics
      nodePort: 30091
      protocol: TCP
